# desing_game

./: .gitignore  docker-compose.yml
editor/: CMakeLists.txt  Makefile  docker-compose.yml
editor/Web/: CMakeLists.txt
editor/app/: main.cpp
editor/docker/: desktop.Dockerfile
editor/src/: CMakeLists.txt
editor/src/app/: dev_key_listener.h  editor.cpp  editor.h  editor_api.cpp  editor_api.h  rendering.cpp  rendering.h
editor/src/app/algorithm/: flip.cpp  flip.h  flip_drawing.cpp  flip_drawing.h  flip_horizontal.cpp  flip_horizontal.h  raster_operations.cpp  raster_operations.h  rotate.cpp  rotate.h  shear.cpp  shear_horizontal.h  shear_vertical.cpp  shear_vertical.h  tile_operations.cpp  tile_operations.h
editor/src/app/core/: colors.h
editor/src/app/document/: active_frame.cpp  active_frame.h  checkerboard.cpp  checkerboard.h  document.cpp  document.h  document_factory.cpp  document_factory.h  document_store.cpp  document_store.h  drawing.cpp  drawing.h  drawing_utils.cpp  drawing_utils.h  frame.h  frame_impl.cpp  frame_impl.h  frame_store.cpp  frame_store.h  resize_drawing.cpp  resize_drawing.h  update_screen_bounds.cpp  update_screen_bounds.h
editor/src/app/rendering/: image_target_renderer.cpp  rendering.cpp  rendering.h  screen_target_renderer.cpp
editor/src/app/tool/: brush.cpp  brush.h  brush_tool.cpp  brush_tool.h  color_picker_tool.cpp  color_picker_tool.h  colorable.cpp  pan_tool.cpp  pan_tool.h  pointer_info.h  rectangle_tool.cpp  rectangle_tool.h  tool.cpp  tool.h  (+4 more)
editor/src/maths/: mat4.cpp  vec2.cpp  vec2.h  vec2_int.cpp  vec2_int.h  vec3.cpp  vec3.h  vec4.cpp
editor/tests/: CMakeLists.txt
(+548 files in other folders)
